@@ -1,6 +1,11 @@
 .TH "History For AdvanceCOMP" 1
 .SH NAME
 advcomp \(hy History For AdvanceCOMP
+.SH ADVANCECOMP VERSION 1.16 2007/11 
+.PD 0
+.IP \(bu
+Allowed recompression with files with zero length.
+.PD
 .SH ADVANCECOMP VERSION 1.15 2005/10 
 .PD 0
 .IP \(bu
