@@ -5,6 +5,14 @@
 <body>
 <center><h2>History For AdvanceCOMP</h2></center>
 <h2> 
+AdvanceCOMP Version 1.16 2007/11
+</h2>
+<ul>
+<li>
+Allowed recompression with files with zero length.
+</li>
+</ul>
+<h2> 
 AdvanceCOMP Version 1.15 2005/10
 </h2>
 <ul>
